# moc-experiments-ros

./: .env  .gitignore  Dockerfile  LICENSE  README.md
.devcontainer/: devcontainer.json
moc_ws/.colcon/: defaults.yaml
moc_ws/src/cable_action_interfaces/: CMakeLists.txt  package.xml
moc_ws/src/cable_action_interfaces/action/: CableMove.action  CablesHitch.action  CablesInterlace.action
moc_ws/src/cable_action_planner/: CMakeLists.txt  package.xml
moc_ws/src/cable_action_planner/config/: default.yaml
moc_ws/src/cable_action_planner/include/cable_action_planner/: cable_action_planner.hpp
moc_ws/src/cable_action_planner/launch/: cable_action_planner.launch.py
moc_ws/src/cable_action_planner/src/: cable_action_planner.cpp  main.cpp
moc_ws/src/cable_plan_executor/: CMakeLists.txt  package.xml
moc_ws/src/cable_plan_executor/config/: default.yaml
moc_ws/src/cable_plan_executor/include/cable_plan_executor/: cable_plan_executor.hpp
moc_ws/src/cable_plan_executor/launch/: cable_plan_executor.launch.py
moc_ws/src/cable_plan_executor/src/: cable_plan_executor.cpp  main.cpp
moc_ws/src/car_model_py/: package.xml  setup.cfg  setup.py
moc_ws/src/car_model_py/car_model_py/: car_model.py
moc_ws/src/car_model_py/config/: default.yaml
moc_ws/src/car_model_py/launch/: car_model.launch.py
moc_ws/src/car_pid_controller/: package.xml  setup.cfg  setup.py
moc_ws/src/car_pid_controller/car_pid_controller/: car_pid_controller.py
moc_ws/src/car_pid_controller/config/: default.yaml
moc_ws/src/car_pid_controller/launch/: car_controller.launch.py
moc_ws/src/click_planner/: CMakeLists.txt  package.xml
moc_ws/src/click_planner/include/click_planner/: click_planner.hpp
moc_ws/src/click_planner/launch/: click_planner.launch.py
moc_ws/src/click_planner/src/: click_planner.cpp  main.cpp
moc_ws/src/differentialdrive_msgs/: CMakeLists.txt  package.xml
moc_ws/src/differentialdrive_msgs/msg/: DifferentialDrive.msg  DifferentialDriveStamped.msg
moc_ws/src/feedback_linearization_controller/: package.xml  setup.cfg  setup.py
moc_ws/src/feedback_linearization_controller/config/: default.yaml
moc_ws/src/feedback_linearization_controller/feedback_linearization_controller/: feedback_linearization_controller.py
moc_ws/src/feedback_linearization_controller/launch/: feedback_linearization_controller.launch.py
moc_ws/src/mocap4r2_tf2/: package.xml  setup.cfg  setup.py
moc_ws/src/mocap4r2_tf2/config/: tf2_params.yaml
moc_ws/src/mocap4r2_tf2/launch/: mocap4r2_tf2.launch.py
moc_ws/src/mocap4r2_tf2/mocap4r2_tf2/: tf2_broadcaster (copy).py  tf2_broadcaster.py  tf2_broadcaster_original.py
moc_ws/src/mocap4ros2_optitrack/mocap4r2_optitrack_driver/config/: mocap4r2_optitrack_driver_params.yaml
moc_ws/src/mocap4ros2_optitrack/mocap4r2_optitrack_driver/launch/: optitrack2.launch.py
moc_ws/src/mocap_sim_tf2_cpp/: CMakeLists.txt  package.xml
moc_ws/src/mocap_sim_tf2_cpp/config/: default.yaml
moc_ws/src/mocap_sim_tf2_cpp/include/mocap_sim_tf2_cpp/: mocap_sim_tf2.hpp
moc_ws/src/mocap_sim_tf2_cpp/launch/: mocap_sim_tf2.launch.py
moc_ws/src/mocap_sim_tf2_cpp/src/: main.cpp  mocap_sim_tf2.cpp
moc_ws/src/motor_controller/: package.xml  setup.py
moc_ws/src/motor_controller/config/: default.yaml
moc_ws/src/motor_controller/launch/: motor_controller_launch.py
moc_ws/src/motor_controller/motor_controller/: motor_controller.py
moc_ws/src/navigation_action_interfaces/: CMakeLists.txt  package.xml
moc_ws/src/navigation_action_interfaces/action/: FollowPath.action
moc_ws/src/path_planner/: CMakeLists.txt  package.xml
moc_ws/src/path_planner/config/: default.yaml
moc_ws/src/path_planner/include/path_planner/: cvParseMap2d.hpp  image_map.hpp  path_planner.hpp
moc_ws/src/path_planner/launch/: path_planner.launch.py
moc_ws/src/path_planner/src/: image_map.cpp  main.cpp  path_planner.cpp
moc_ws/src/path_planning_interfaces/: CMakeLists.txt  package.xml
moc_ws/src/path_planning_interfaces/action/: PathPlan.action
moc_ws/src/robot_selector_rviz/: CMakeLists.txt  package.xml  plugin_description.xml
moc_ws/src/robot_selector_rviz/include/robot_selector_rviz/: robot_selector_panel.hpp
moc_ws/src/robot_selector_rviz/src/: robot_selector_panel.cpp
moc_ws/src/robot_utils/: CMakeLists.txt  package.xml
moc_ws/src/robot_utils/include/robot_utils/: cable.hpp  geometry.hpp  log_utils.hpp  tf_listener_wrapper.hpp  tf_utils.hpp
moc_ws/src/robot_utils/src/: cable.cpp  tf_utils.cpp
moc_ws/src/robot_visualizer/: package.xml  setup.py
moc_ws/src/robot_visualizer/config/: default.yaml
moc_ws/src/robot_visualizer/launch/: robot_visualizer.launch.py
moc_ws/src/robot_visualizer/robot_visualizer/: robot_visualizer.py
planner_adapter/: pyproject.toml
planner_adapter/planner_adapter/: action.py  cli.py  configuration_parser.py  object_caging_graph.py  point_2d.py  post_processor.py
resources/config/: robot_configs.yaml  robot_names.yaml  rr_config.yaml  sim_config.yaml
resources/launch/: rr_click.launch.py  rr_plan.launch.py  sim_click.launch.py  sim_plan.launch.py  vis.launch.py
resources/rviz/: rr_click.rviz  rr_plan.rviz  sim_click.rviz  sim_plan.rviz
